# StarTap-Image-Shrinking-Tool

./: .gitignore  AI接入说明.md  Cargo.toml  Info.plist  LICENSE  README.md  StarTap Image Shrinking Tool.py  build.rs  release_notes.md  rust版高清缩图界面mac版界面.jpg;  使用说明_v4.0.md  升级说明 v3.2.1.md  升级说明_v4.0.md  清除mac小文件2.0.py  高清缩图 2.6.py
.cargo/: config.toml
build_artifacts/: RUST_WIN_EXE_PACKAGING_STABLE_GUIDE.md  gen_promo.py  generate_icns.sh  generate_icon_v2.py
src/: cli.rs  lib.rs  main.rs  main_backup_v4.rs  main_original_ui.rs
