[package]
name = "rust_image_compressor"
version = "4.0.0"
edition = "2021"
authors = ["星TAP实验室"]
description = "图片高速压缩工具 - 星TAP实验室出品"

[dependencies]
eframe = "0.26"
egui = "0.26"
image = { version = "0.24", features = ["png", "jpeg", "ico", "webp"] }
fast_image_resize = "4.2"
jpeg-encoder = "0.5"
rayon = "1.8"
anyhow = "1.0"
crossbeam-channel = "0.5"
opener = "0.6"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rfd = "0.14"
img-parts = "0.3"
bytes = "1.5"
serde_json = "1.0"
rust-core-lib = { path = "../.trae/templates/rust-core-lib" }
clap = { version = "4.0", features = ["derive"] }
memmap2 = "0.9"
dirs = "5.0"


# Windows specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
embed-resource = "2.4"
